name:               ccblog
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , split == 0.2.*
                  , blaze-html == 0.9.*
                  , blaze-markup == 0.8.*
                  , regex-compat == 0.95.*
                  , hakyll == 4.9.*
  ghc-options:      -threaded
  default-language: Haskell2010
